[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/objects/Healthbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Montserrat.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 540 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 540 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1216, 128 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1216, 128 )

[sub_resource type="DynamicFont" id=6]
size = 72
outline_size = 4
outline_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Cam" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Bounds" type="RigidBody2D" parent="."]
mode = 3
gravity_scale = 0.0

[node name="Left" type="CollisionShape2D" parent="Bounds"]
position = Vector2( -128, 540 )
shape = SubResource( 1 )

[node name="Right" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 2048, 540 )
shape = SubResource( 2 )

[node name="Up" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 960, -128 )
shape = SubResource( 3 )

[node name="Down" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 960, 1208 )
shape = SubResource( 4 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 540 )
slideVelocity = 32

[node name="Spawns" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Bullets" type="Node2D" parent="."]

[node name="BulletExplosions" type="Node2D" parent="."]
position = Vector2( 0, -1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ShootParticles" type="Node2D" parent="."]

[node name="HUD" type="Node2D" parent="."]

[node name="Healthbar" parent="HUD" instance=ExtResource( 3 )]
position = Vector2( 960, 96 )

[node name="Score" type="Label" parent="HUD"]
margin_left = 480.0
margin_top = 128.0
margin_right = 1440.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 6 )
text = "Score: "
align = 1
valign = 1
